--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,49 @@ footer span {
 }
 
 /* MEDIA QUERIES */
-@media only screen and (min-width: 768px)
-{
+@media all and (min-width:768px) {
+/* Tablet styles here */
+	.bottom-section{
+    border-top: 1px solid #EEEEEE;
+    justify-content: space-between;
+    align-items: flex-start;
 
+  }
+
+  .section-one,
+  .section-two,
+	.section-three {
+    border-top: none;
+    flex-basis: 30%;
+  }
+
+  .section-two {
+    border-left: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
+    padding: 0 20px;
+  }
+}
+}
+
+@media all and (min-width:1200px) {
+/* Desktop styles here */
+	header {
+		justify-content: space-between;
+	}
+
+	header h1 {
+    width: 30%;
+    padding: 0;
+    border-bottom: none;
+    text-align: left;
+	  }
+
+	header nav {
+		width: 40%
+		}
+
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
 }
